<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgorund"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/title2"
        android:textColor="#fff"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_UN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/use"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="11dp"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/message2"
        app:layout_constraintStart_toStartOf="@+id/message2"
        app:layout_constraintTop_toBottomOf="@+id/message2" />

    <EditText
        android:id="@+id/edit_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="11dp"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_UN2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_UN2"
        app:layout_constraintTop_toBottomOf="@+id/edit_UN2" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#fe3c72"
        android:text="@string/title2"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/edit_pass2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/edit_pass2"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_UN2"
        app:layout_constraintTop_toTopOf="@+id/edit_UN2"
        app:srcCompat="@drawable/icons8_user_48" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="41dp"
        android:layout_marginEnd="176dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_pass2"
        app:layout_constraintTop_toTopOf="@+id/edit_pass2"
        app:srcCompat="@drawable/icons8_lock" />
</androidx.constraintlayout.widget.ConstraintLayout>